# ai-contract-review

./: .env.template  .replit  RENDER_DEPLOYMENT.md  best_practices_training.py  complete_contract_training.py  config.py  conversation_history.json  deploy-instructions.txt  deployment_log.txt  deployment_trigger.txt  firestore_security_rules.txt  index.html  local_setup_guide.txt  main.py  ngrok_auth_setup.md  pyproject.toml  render.yaml  replit.md  setup_ngrok_webhook.py  simple_ngrok_setup.py  test_all_contract_types.py  test_enhanced_rag.py  test_rag_system.py  train_rag_system.py
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-conte-1756420587241_1756420587243.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-title-Contract-RAG-Analyzer--1756134824595_1756134824596.txt  Pasted-Objective-Configure-a-RAG-Retrieval-Augmented-Generation-system-in-Replit-using-Pinecone-for-ve-1756237044201_1756237044204.txt  Pasted-Objective-Configure-a-RAG-Retrieval-Augmented-Generation-system-in-Replit-using-Pinecone-for-vect-1756236924500_1756236924501.txt  Pasted-Prompt-Update-the-existing-contract-form-UI-without-breaking-the-current-layout-theme-or-styling-1756145934377_1756145934381.txt  Pasted-Replit-Prompt-System-Instruction-You-are-Lexi-a-friendly-knowledgeable-and-interactive-Le-1756311584029_1756311584030.txt  Pasted-Task-Create-a-production-ready-ai-service-py-used-by-main-py-to-analyze-contract-text-Stack-Pytho-1756131552924_1756131552926.txt  (+1 more)
models/: __init__.py  contract_analysis.py
services/: __init__.py  (+9 more)
(+8 files in other folders)
